# libwildmatch

./: Cargo.toml  README.md
include/: wildmatch.h
src/: lib.rs
